--- a/DemoServer/Pages/_Host.cshtml
+++ b/DemoServer/Pages/_Host.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/"
-@namespace DemoServer.Pages
+@namespace LibreriaComponenti.Pages
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
@@ -31,5 +33,14 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQIz3bxUElBcxofJ4plvhT0da4gJPs7zg"
+            async></script>
+
+    <script src="./_content/LibreriaComponenti/myFunctions.js"></script>
+
 </body>
 </html>
