--- a/DemoServer/_Imports.razor
+++ b/DemoServer/_Imports.razor
@@ -7,8 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using DemoServer
-@using DemoServer.Shared
 @using LibreriaComponenti
 @using LibreriaComponenti.Components
 @using LibreriaComponenti.Models 
 @using LibreriaComponenti.Interfaces
+@using LibreriaComponenti.Pages
+@using LibreriaComponenti.Shared
