--- a/DemoWASM/_Imports.razor
+++ b/DemoWASM/_Imports.razor
@@ -7,12 +7,13 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using DemoWASM
-@using DemoWASM.Shared
 @using DemoWASM.Services
 @using LibreriaComponenti
 @using LibreriaComponenti.Interfaces
 @using LibreriaComponenti.Models
 @using LibreriaComponenti.Components
+@using LibreriaComponenti.Pages
+@using LibreriaComponenti.Shared
 
 
 
