--- a/LibreriaComponenti/LibreriaComponenti/_Imports.razor
+++ b/LibreriaComponenti/LibreriaComponenti/_Imports.razor
@@ -1,5 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
 @using LibreriaComponenti.Interfaces
 @using LibreriaComponenti.Models
 @using LibreriaComponenti.Components
+@using LibreriaComponenti.Pages
+@using LibreriaComponenti.Shared
 @using Microsoft.AspNetCore.Components.Forms
+@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.JSInterop
+
