--- a/LibreriaComponenti/LibreriaComponenti/Components/DettaglioLog.razor
+++ b/LibreriaComponenti/LibreriaComponenti/Components/DettaglioLog.razor
@@ -4,7 +4,7 @@
     <DataAnnotationsValidator></DataAnnotationsValidator>
     <ValidationSummary>
     </ValidationSummary>
-    @if (Warning.Length > 0)
+    @if (Warning?.Length > 0)
     {
         <div class="alert alert-danger">
             @Warning
