--- a/LibreriaComponenti/LibreriaComponenti/Shared/NavMenu.razor
+++ b/LibreriaComponenti/LibreriaComponenti/Shared/NavMenu.razor
@@ -22,6 +22,17 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="reqres">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> ReqRes data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="reqresnewuser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> New User
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
