--- a/LibreriaComponenti/LibreriaComponenti/Pages/Counter.razor
+++ b/LibreriaComponenti/LibreriaComponenti/Pages/Counter.razor
@@ -3,7 +3,7 @@
 @inject MySettings settings 
 
 
-<h1>Log del server @settings.Setting1 @settings.Setting2</h1>
+<h1>myLog del server @settings.Setting1 @settings.Setting2</h1>
 
 <!--
 <LogsListComponent Logs="@service.GetLogs()"></LogsListComponent>
